SVTR-257 Add a tool to read weight records from the Logbook
